Add void singularity

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1,3 +1,4 @@
+item.contenttweaker.singularity_void.name=§eVoid Singularity
 item.contenttweaker.singularity_iron.name=§eIron Singularity
 item.contenttweaker.singularity_gold.name=§eGold Singularity
 item.contenttweaker.singularity_lapis.name=§eLapis Singularity
