Add thaumium and brass singularity

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -14,3 +14,5 @@ item.contenttweaker.singularity_emerald.name=§eEmerald Singularity
 item.contenttweaker.singularity_fluxed.name=§eFluxed Singularity
 item.contenttweaker.singularity_platinum.name=§ePlatinum Singularity
 item.contenttweaker.singularity_iridium.name=§eIridium Singularity
+item.contenttweaker.singularity_thaumium.name=§eThaumium Singularity
+item.contenttweaker.singularity_brass.name=§eBrass Singularity
