Add Manasteel, Terrasteel and Elementium singularity

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -16,3 +16,6 @@ item.contenttweaker.singularity_platinum.name=§ePlatinum Singularity
 item.contenttweaker.singularity_iridium.name=§eIridium Singularity
 item.contenttweaker.singularity_thaumium.name=§eThaumium Singularity
 item.contenttweaker.singularity_brass.name=§eBrass Singularity
+item.contenttweaker.singularity_manasteel.name=§eManasteel Singularity
+item.contenttweaker.singularity_terrasteel.name=§eTerrasteel Singularity
+item.contenttweaker.singularity_elementium.name=§eElementium Singularity
